# grafana_collection_of_metrics

./: .dockerignore  .env.example  .env.staging.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MIGRATION_TO_RUFF.md  Makefile  README.md  alembic.ini  command  docker-compose-prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  loki-config.yml  mypy-ci.ini  prometheus-alerts.yml  prometheus.yml  promtail-config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  README_github.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  release.yml
app/: config.py  exceptions.py  health.py  main.py
app/auth/: dao.py  models.py  router.py  schemas.py  utils.py
app/dao/: base.py  database.py
app/dependencies/: auth_dep.py  dao_dep.py
app/migration/: env.py
app/migration/versions/: 3bb3bb4784a4_auth.py  dec3da2b7800_initial_revision.py
docs/: CI_CD_SETUP.md  RUFF_GUIDE.md
grafana/provisioning/dashboards/: fastapi-observability.json
grafana/provisioning/datasources/: datasources.yml
load_testing/: test_metrics.py
load_testing/ab/: ApacheBench.md
scripts/: ci-local.sh  deploy-staging.sh  test-staging-local.sh
tests/: README.md  conftest.py  requirements-test.txt  test_auth.py  test_config.py  test_dao.py  test_exceptions.py  test_integration.py  test_main.py  test_performance.py  test_schemas.py  test_utils.py
